--- a/Ritual.Booking.Web/Views/Locations/Index.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Index.cshtml
@@ -25,7 +25,8 @@
                 <label class="control-label">Location Search</label>
                 <p>Find by name, country or address:</p>
                 @Html.TextBox("SearchString", "", new { @class = "form-control" })
-                <input type="submit" class="button" value="Search" />              
+                <input type="submit" class="button" name="Command" value="Search" />
+                <input type="submit" class="button" name="Command" value="Reset" />
             }
             <table class="table">
                 <tr>
