--- a/Ritual.Booking.Web/Views/TrainingZone/Dashboard.cshtml
+++ b/Ritual.Booking.Web/Views/TrainingZone/Dashboard.cshtml
@@ -14,10 +14,85 @@
 <section class="content">
     <div class="row">
         <div class="large-12 columns">
-            <p>Welcome [User First Name] to your training gateway.  Be Brave!</p>
+            <p>Welcome back @Model.UserMember.FirstName to your training gateway.  Be Brave!</p>
+
+            <div class="row">
+
+                <a href="@Url.Action("MyRitual", "TrainingZone")">
+                    <div class="card-container large-4 medium-6 small-12 columns">
+                        <div class="card">
+                            <div class="front bg-greensea">
+                                <!-- row -->
+                                <div class="row collapse">
+                                    <!-- col -->
+                                    <div class="small-3 columns">
+                                        <i class="fa fa-user fa-4x"></i>
+                                    </div>
+                                    <!-- /col --> <!-- col -->
+                                    <div class="small-9 columns">
+                                        <p class="text-elg text-strong mb-0">My Ritual</p>
+                                        <span>View / Manage your Profile and Memberships.</span>
+                                    </div> <!-- /col -->
+                                </div> <!-- /row -->
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="@Url.Action("Booking", "TrainingZone")">
+                    <div class="card-container large-4 medium-6 small-12 columns">
+                        <div class="card">
+                            <div class="front bg-greensea">
+                                <!-- row -->
+                                <div class="row collapse">
+                                    <!-- col -->
+                                    <div class="small-3 columns">
+                                        <i class="fa fa-plus fa-4x"></i>
+                                    </div>
+                                    <!-- /col --> <!-- col -->
+                                    <div class="small-9 columns">
+                                        <p class="text-elg text-strong mb-0">New Booking</p>
+                                        <span>Book your next ritual experience.</span>
+                                    </div> <!-- /col -->
+                                </div> <!-- /row -->
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="@Url.Action("MyAssessments", "TrainingZone")">
+                    <div class="card-container large-4 medium-6 small-12 columns">
+                        <div class="card">
+                            <div class="front bg-greensea">
+                                <!-- row -->
+                                <div class="row collapse">
+                                    <!-- col -->
+                                    <div class="small-3 columns">
+                                        <i class="fa fa-bar-chart-o fa-4x"></i>
+                                    </div>
+                                    <!-- /col --> <!-- col -->
+                                    <div class="small-9 columns">
+                                        <p class="text-elg text-strong mb-0">My Assessments</p>
+                                        <span>View the details of your quarterly assessments.</span>
+                                    </div> <!-- /col -->
+                                </div> <!-- /row -->
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     <div class="row">
+        <div class="large-4 medium-4 columns">
+            <h3>My Current Membership</h3>
+            <table class="table">
+                <tr>
+                    <th>Details</th>
+                </tr>
+                <tr>
+                    <td>Your current membership will expire in @Model.DaysTillMembershipExpiry days.</td>
+                </tr>
+            </table>
+        </div>
         <div class="large-4 medium-4 columns">
             <h3>My Upcoming Bookings</h3>
             <table class="table">
@@ -41,8 +116,6 @@
                     </tr>
                 }
             </table>
-        </div>
-        <div class="large-4 medium-4 columns">
             <h3>My Past Bookings</h3>
             <table class="table">
                 <tr>
