--- a/Ritual.Booking.Web/Views/TrainingZone/MyAssessments.cshtml
+++ b/Ritual.Booking.Web/Views/TrainingZone/MyAssessments.cshtml
@@ -1,6 +1,22 @@
 ﻿@{
-    ViewBag.Title = "Training Zone Dashboard";
+    ViewBag.Title = "My Quarterly Assessments";
 }
-<h2>@ViewBag.Title.</h2>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
 
-<p>This will be the Dashboard for members.</p>
+            <div>
+                @Html.ActionLink("Back to Dashboard", "Dashboard", "", new { @class = "button" })
+            </div>
+        </div>
+    </div>
+</section>
+
