--- a/Ritual.Booking.Web/Views/TrainingZone/MyRitual.cshtml
+++ b/Ritual.Booking.Web/Views/TrainingZone/MyRitual.cshtml
@@ -1,6 +1,21 @@
 ﻿@{
     ViewBag.Title = "My Ritual";
 }
-<h2>@ViewBag.Title.</h2>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
 
-<p>This will be the display of the current users profile.</p>
+            <div>
+                @Html.ActionLink("Back to Dashboard", "Dashboard", "", new { @class = "button" })
+            </div>
+        </div>
+    </div>
+</section>
