--- a/Ritual.Booking.Web/Views/Locations/Create.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Create.cshtml
@@ -70,12 +70,12 @@
                     </div>
 
                     @*<div class="form-group">
-                            @Html.LabelFor(model => model.Coordinates, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Coordinates, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Coordinates, "", new { @class = "text-danger" })
-                            </div>
-                        </div>*@
+                        @Html.LabelFor(model => model.Coordinates, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Coordinates, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Coordinates, "", new { @class = "text-danger" })
+                        </div>
+                    </div>*@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
@@ -95,4 +95,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript" src="~/Scripts/EFSpatialGoogleMaps.js" /></script>
 }
