--- a/Ritual.Booking.Web/Views/Locations/Edit.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Edit.cshtml
@@ -97,4 +97,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript" src="~/Scripts/EFSpatialGoogleMaps.js"/></script>
 }
