--- a/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
@@ -16,6 +16,7 @@
     @Styles.Render("~/Content/foundation/css")
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,300,400italic,300italic,700italic" rel="stylesheet" type="text/css" />
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     @RenderSection("head", required: false)
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -57,6 +58,14 @@
                     @if (ViewContext.HttpContext.User.Identity.IsAuthenticated)
                     {
                         <li class="treeview">
+                            @Html.ActionLink("Front Of House", "Index", "FrontOfHouse")
+                            <ul class="treeview-menu">
+                                <li>@Html.ActionLink("Check-in", "checkin", "FrontOfHouse")</li>
+                                <li>@Html.ActionLink("Fuelbar", "fuelbar", "FrontOfHouse")</li>
+                                <li>@Html.ActionLink("Feedback", "feedback", "FrontOfHouse")</li>
+                            </ul>
+                        </li>
+                        <li class="treeview">
                             <a href="#">Admin</a>
                             <ul class="treeview-menu">
                                 <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
@@ -68,7 +77,7 @@
                         </li>
 
                         <li class="treeview">
-                           <a href="#">Training Zone</a>
+                            <a href="#">Training Zone</a>
                             <ul class="treeview-menu">
                                 <li>@Html.ActionLink("Dashboard", "Dashboard", "TrainingZone")</li>
                                 <li>@Html.ActionLink("My Ritual", "MyRitual", "TrainingZone")</li>
