--- a/Ritual.Booking.Web/Views/Members/Details.cshtml
+++ b/Ritual.Booking.Web/Views/Members/Details.cshtml
@@ -178,7 +178,7 @@
                         RPE Score
                     </th>
                     <th>
-                        Trainer
+                        Employee
                     </th>
                     <th>Action</th>
                 </tr>
@@ -199,7 +199,7 @@
                             @Html.DisplayFor(modelItem => item.QAClientRPE)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Trainer.FullName)
+                            @Html.DisplayFor(modelItem => item.Employee.FullName)
                         </td>
                         <td>
                             @Html.ActionLink("Select", "Index", "Memberships", new { id = item.Id }, new { @class = "button" })
