--- a/Ritual.Booking.Web/Views/QuarterlyAssessments/Create.cshtml
+++ b/Ritual.Booking.Web/Views/QuarterlyAssessments/Create.cshtml
@@ -40,10 +40,10 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.TrainerId, "Coach", htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.LabelFor(model => model.EmployeeId, "Coach", htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.DropDownList("TrainerId", null, htmlAttributes: new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.TrainerId, "", new { @class = "text-danger" })
+                                    @Html.DropDownList("EmployeeId", null, htmlAttributes: new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
