--- a/Ritual.Booking.Web/Views/Locations/Delete.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Delete.cshtml
@@ -68,11 +68,11 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.Coordinates)
+                        @Html.DisplayNameFor(model => model.Currency)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.Coordinates)
+                        @Html.DisplayFor(model => model.Currency)
                     </dd>
 
                 </dl>
