--- a/Ritual.Booking.Web/Views/Members/Details.cshtml
+++ b/Ritual.Booking.Web/Views/Members/Details.cshtml
@@ -152,10 +152,10 @@
                             @Html.DisplayFor(modelItem => item.EndDate)
                         </td>
                         <td>
-                            @Html.ActionLink("Select", "Index", "QuarterlyAsssessments", new { id = item.Id }, new { @class = "button" })
-                            @Html.ActionLink("Edit", "Edit", "QuarterlyAsssessments", new { id = item.Id }, new { @class = "button" })
-                            @Html.ActionLink("Details", "Details", "QuarterlyAsssessments", new { id = item.Id }, new { @class = "button" })
-                            @Html.ActionLink("Delete", "Delete", "QuarterlyAsssessments", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Select", "Index", "Memberships", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Edit", "Edit", "Memberships", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Details", "Details", "Memberships", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Delete", "Delete", "Memberships", new { id = item.Id }, new { @class = "button" })
                         </td>
                     </tr>
                 }
