--- a/Ritual.Booking.Web/Views/Locations/Create.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Create.cshtml
@@ -68,15 +68,15 @@
                             @Html.ValidationMessageFor(model => model.TimeZoneOffset, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
-                    @*<div class="form-group">
-                        @Html.LabelFor(model => model.Coordinates, htmlAttributes: new { @class = "control-label col-md-2" })
+                    
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Currency, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Coordinates, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Coordinates, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.Currency, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Currency, "", new { @class = "text-danger" })
                         </div>
-                    </div>*@
-
+                    </div>
+                    
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Create" class="button" />
