--- a/Ritual.Booking.Web/Views/Locations/Edit.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Edit.cshtml
@@ -70,15 +70,31 @@
                             @Html.ValidationMessageFor(model => model.TimeZoneOffset, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Currency, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Currency, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Currency, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-                    @*<div class="form-group">
-                            @Html.LabelFor(model => model.Coordinates, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Coordinates, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Coordinates, "", new { @class = "text-danger" })
-                            </div>
-                        </div>*@
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Latitude, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Latitude, new { htmlAttributes = new { @class = "editor-for-latitude form-control" } })
+                            @Html.ValidationMessageFor(model => model.Latitude, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Longitude, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Longitude, new { htmlAttributes = new { @class = "editor-for-longitude form-control" } })
+                            @Html.ValidationMessageFor(model => model.Longitude, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="location-map"></div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Save" class="button" />
