--- a/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
@@ -17,7 +17,8 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,300,400italic,300italic,700italic" rel="stylesheet" type="text/css" />
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    @RenderSection("head", required: false)
+        @RenderSection("head", required: false)
+        @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body class="skin-green">
