--- a/Ritual.Booking.Web/Views/OpeningHourOverrides/Index.cshtml
+++ b/Ritual.Booking.Web/Views/OpeningHourOverrides/Index.cshtml
@@ -1,75 +1,71 @@
 ﻿@model IEnumerable<Ritual.Booking.Data.OpeningHourOverride>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Ritual Locations - Opening Hour Overrides";
 }
 
-<h2>Index</h2>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.OverrideStartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OverrideEndDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DayOfWeek)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AltOpenTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AltCloseTme)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Closed)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OverrideReason)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Location.Name)
-        </th>
-        <th></th>
-    </tr>
+            <p>
+                @Html.ActionLink("Create New", "Create", "", new { @class = "button" })
+            </p>
+            <table class="table">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OverrideStartDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AltOpenTime)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OverrideEndDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AltCloseTme)
+                    </th>
+                    <th>
+                       Location
+                    </th>
+                    <th></th>
+                </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.OverrideStartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OverrideEndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DayOfWeek)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AltOpenTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AltCloseTme)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Closed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OverrideReason)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.OverrideStartDate.ToString("dddd, dd MMM, yyyy")
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AltOpenTime)
+                        </td>
+                        <td>
+                            @item.OverrideEndDate.ToString("dddd, dd MMM, yyyy")
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AltCloseTme)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OverrideReason)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "button" })
+                        </td>
+                    </tr>
+                }
 
-</table>
+            </table>
+        </div>
+    </div>
+</section>
