--- a/Ritual.Booking.Web/Content/foundation/app.css
+++ b/Ritual.Booking.Web/Content/foundation/app.css
@@ -12,10 +12,11 @@
 
 body, html {
     background-color: #343434;
-    font-family:'Open Sans', arial, verdana;
+    font-family: 'Open Sans', arial, verdana;
     overflow-x: hidden !important;
     min-height: 100%;
     font-size: 100%;
+    color: #fff;
 }
 
 html {
@@ -35,10 +36,19 @@ p {
     margin: 0px;
 }
 
+ul {
+    font-family: 'Open Sans', arial, verdana;
+    font-size: 1em;
+    color: #fff;
+    padding: 10px 0px 10px 0px;
+    font-weight: lighter;
+    margin: 0px 0px 0px 10px;
+}
+
 dl {
     padding: 20px;
     background: rgba(0,0,0,0.1);
-    color:#fff;
+    color: #fff;
 }
 
 dt {
@@ -60,18 +70,18 @@ dd {
 
 .table {
     width: 100%;
-    font-weight:normal !important;
+    font-weight: normal !important;
 }
 
     .table th {
         text-align: left;
-        font-weight:normal;
-        font-size:1.3em;
-        letter-spacing:1px; 
-        font-family:'5amgender';
+        font-weight: normal;
+        font-size: 1.3em;
+        letter-spacing: 1px;
+        font-family: '5amgender';
     }
 
-    .table td{        
+    .table td {
         font-family: 'Open Sans', arial, verdana;
         font-size: 1em;
     }
@@ -79,11 +89,11 @@ dd {
     .table .button {
         margin: 0px;
         padding: 5px;
-        font-size:1em;
+        font-size: 1em;
     }
 
 p a {
-    color: #85355d;
+    color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -94,16 +104,16 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: 1px;
     clear: both;
     color: #fff;
-    font-weight:normal;
+    font-weight: normal;
 }
 
 .button, button {
     font-family: '5amgender','Open Sans', arial, verdana;
-    font-weight:normal;
-    font-size:1.3em;
-    letter-spacing:1px;
-    background-color:#5CAD8D;
-    border:none;
+    font-weight: normal;
+    font-size: 1.3em;
+    letter-spacing: 1px;
+    background-color: #5CAD8D;
+    border: none;
 }
 
     .button.cancel {
@@ -486,16 +496,16 @@ img {
 
 /* SIDEBAR COLOURS */
 .sidebar {
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid #222;
 }
 
     .sidebar > .sidebar-menu > li {
-        border-top: 1px solid #333;
-        border-bottom: 0px solid #444;
+        border-top: 1px solid #222;
+        border-bottom: 0px solid #222;
     }
 
         .sidebar > .sidebar-menu > li:first-of-type {
-            border-top: 1px solid #444;
+            border-top: 1px solid #222;
         }
 
             .sidebar > .sidebar-menu > li:first-of-type > a {
@@ -523,6 +533,7 @@ img {
 
 .left-side {
     background: #222;
+    background-image: url('../images/mainbg.jpg');
 }
 
 .sidebar a {
@@ -580,9 +591,32 @@ div.alert-box {
 
 #loginForm {
     background-color: rgba(0,0,0,0.1);
-    padding: 20px;
+    padding: 40px;
 }
 
+.login-button
+{
+    width:100%;
+}
+
+.register-button
+{    
+    width:100%;
+    background-color:#05838b;
+}
+
+.img-circle {
+    border-radius: 50%;
+}
+
+.not-logged-avatar {
+    width: 150px;
+    margin: 0px auto;
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+}
 /*----------------------------
 	i.-- builder form
 	-----------------------------*/
@@ -591,7 +625,7 @@ div.alert-box {
     font-size: 1.3em;
     font-family: '5amgender','Open Sans', arial, verdana;
     color: #fff;
-    letter-spacing:1px;
+    letter-spacing: 1px;
 }
 
 .builder-form p {
@@ -707,11 +741,11 @@ div.alert-box {
 }
 
 .text-elg {
-font-size: 28px!important;
-font-weight:bold;
-line-height: 34px;
-margin:0px;
-padding:0px 0px 10px 0px    ;
+    font-size: 28px !important;
+    font-weight: bold;
+    line-height: 34px;
+    margin: 0px;
+    padding: 0px 0px 10px 0px;
 }
 
 .card-container .card {
@@ -722,47 +756,45 @@ padding:0px 0px 10px 0px    ;
     cursor: pointer;
     z-index: 9;
 }
-.card-container .card .front {
-    height: 100%;
+
+    .card-container .card .front {
+        height: 100%;
+        position: relative;
+        width: 100%;
+        padding: 28px;
+        top: 0;
+        left: 0;
+        z-index: 11;
+        background-color: #16a085 !important;
+        color: #fff;
+    }
+
+    .card-container .card i {
+        font-size: 3em;
+    }
+
+.booking-slot {
     position: relative;
-    width: 100%;
-    padding: 28px;
-    top: 0;
-    left: 0;
-    z-index: 11;
-    background-color:#16a085!important;
-    color:#fff;
+    background-color: #000;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    margin: 5px;
+    float: left;
+    color: #fff;
 }
 
-.card-container .card i{
-    font-size:3em;
-}
+    .booking-slot.checkedin {
+        background-color: green;
+    }
 
-.booking-slot{
-    position:relative;
-    background-color:#000;
-    padding:10px;
-    width:200px;
-    height:200px;
-    margin:5px;
-    float:left;
-    color:#fff;
-}
+    .booking-slot.closed, .booking-slot.empty {
+        background-color: #990000;
+    }
 
-.booking-slot.checkedin
-{
-    background-color:green;
-}
-
-.booking-slot.closed, .booking-slot.empty
-{
-    background-color:#990000;
-}
-
-.session-booking
-{
-    padding:5px;
-    position:absolute;
-    bottom:-10px;
-    width:180px;
+.session-booking {
+    padding: 5px;
+    position: absolute;
+    bottom: -10px;
+    width: 180px;
 }
