--- a/Ritual.Booking.Web/Views/Locations/Details.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Details.cshtml
@@ -15,16 +15,14 @@
 <!-- Main content -->
 <section class="content">
     <div class="row">
-        <div class="large-12">
-            <h2>Location Details</h2>
-            <p>
-                @Html.ActionLink("Edit", "Edit", new { id = Model.Location.Id }, new { @class = "button" })
-                @Html.ActionLink("Back to List", "Index", null, new { @class = "button" })
-            </p>
+        <div class="large-12 medium-12 columns">
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Location.Id }, new { @class = "button" })
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "button" })
         </div>
     </div>
     <div class="row">
         <div class="large-6 medium-6 columns">
+
             <dl class="dl-horizontal">
                 <dt>
                     @Html.DisplayNameFor(model => model.Location.Name)
@@ -74,10 +72,26 @@
                     @Html.DisplayFor(model => model.Location.TimeZoneOffset)
                 </dd>
 
+                <dt>
+                    @Html.DisplayNameFor(model => model.Location.Longitude)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Location.Longitude)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Location.Latitude)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Location.Latitude)
+                </dd>
+                <input type="hidden" name="location_lat" value="@Model.Location.Latitude" class="map-for-latitude" />
+                <input type="hidden" name="location_lng" value="@Model.Location.Longitude" class="map-for-longitude" />
             </dl>
         </div>
         <div class="large-6 medium-6 columns">
-            <div id="ritualMap" style="position:relative; width:100%; height:280px;"></div>
+            <div class="location-map"></div>
         </div>
     </div>
     <div class="row">
@@ -154,40 +168,8 @@
     </div>
 </section>
 
-
 @section Scripts {
-    <script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            getMapData();
-        });
-
-        var map = null;
-        function LoadMap(long, lat){
-            console.log(long);
-            console.log(lat);
-            map = new Microsoft.Maps.Map(document.getElementById('ritualMap'),
-                {
-                    credentials: "AjtUzWJBHlI3Ma_Ke6Qv2fGRXEs0ua5hUQi54ECwfXTiWsitll4AkETZDihjcfeI",
-                    center: new Microsoft.Maps.Location(lat,long),
-                    mapTypeId: Microsoft.Maps.MapTypeId.road,
-                    zoom:16
-                });
-            var center = map.getCenter();
-
-            var pin = new Microsoft.Maps.Pushpin(center, {icon : '/Content/images/ritual_pushpin.png', width: 50, height:50});
-            map.entities.push(pin);
-        }
-
-        function getMapData()
-        {
-            var url = "/Locations/GetCurrentLocationMapData";
-            $.getJSON(url, { id: @Html.DisplayFor(model => model.Location.Id) }, function (data) {
-                LoadMap(data[0].longitude, data[0].latitude);           
-            });
-        }
-
-
-    </script>
+    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript" src="~/Scripts/EFSpatialGoogleMaps.js" /></script>
 }
 
