--- a/Ritual.Booking.Web/Views/Locations/Index.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Index.cshtml
@@ -16,73 +16,77 @@
 <section class="content">
     <div class="row">
         <div class="large-12 columns">
+            <div class="row">
+                <div class="large-6 medium-6 columns">
+                    <p>
+                        @Html.ActionLink("Create New", "Create", "", new { @class = "button" })
+                    </p>
+                    @using (Html.BeginForm())
+                    {
+                        <label class="control-label">Location Search</label>
+                        <p>Find by name, country or address:</p>
+                        @Html.TextBox("SearchString", "", new { @class = "form-control" })
+                        <input type="submit" class="button" name="Command" value="Search" />
+                        <input type="submit" class="button" name="Command" value="Reset" />
+                    }
+                </div>
+                <div class="large-6 medium-6 columns">
 
-            <p>
-                @Html.ActionLink("Create New", "Create", "", new { @class = "button" })
-            </p>
-            @using (Html.BeginForm())
-            {
-                <label class="control-label">Location Search</label>
-                <p>Find by name, country or address:</p>
-                @Html.TextBox("SearchString", "", new { @class = "form-control" })
-                <input type="submit" class="button" name="Command" value="Search" />
-                <input type="submit" class="button" name="Command" value="Reset" />
-            }
-            <table class="table">
-                <tr>
-                    <th>
-                        @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm })
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Address)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.PhoneNumber)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.PostCode)
-                    </th>
-                    <th>
-                        @Html.ActionLink("Country", "Index", new { sortOrder = ViewBag.CountrySortParm })
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TimeZoneOffset)
-                    </th>
-                    <th>Action</th>
-                </tr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 columns">
 
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Address)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.PhoneNumber)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.PostCode)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Country)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TimeZoneOffset)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "button" })
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "button" })
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "button" })
 
-                        </td>
-                    </tr>
-                }
+                    <table class="table">
+                        <tr>
+                            <th>
+                                @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm })
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Address)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.PhoneNumber)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.PostCode)
+                            </th>
+                            <th>
+                                @Html.ActionLink("Country", "Index", new { sortOrder = ViewBag.CountrySortParm })
+                            </th>
+                            <th>Action</th>
+                        </tr>
 
-            </table>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Address)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.PostCode)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Country)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "button" })
+                                    @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "button" })
+                                </td>
+                            </tr>
+                        }
+
+                    </table>
+
+                </div>
+            </div>
         </div>
     </div>
 </section>
-
